--- a/practice4.html
+++ b/practice4.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,24 +12,25 @@
         <!--List in HTML-->
         <!--There are two types of list ordered and unordered list in HTML-->
        <ul> <!--Unordered List-->
-        <li><B>Apple</B></li>
-        <ul> <!--Creating a sub list of apple-->
-            <li>Color: Red</li>
-            <li>Season: Winters</li>
-        </ul>
-        <li><I>Mango</I></li>
-        <li><U>Orange</U></li>
+        <li><b>Apple</b>
+            <ul> <!--Creating a sub list of apple-->
+                <li>Color: Red</li>
+                <li>Season: Winters</li>
+            </ul>
+        </li>
+        <li><i>Mango</i></li>
+        <li><u>Orange</u></li>
        </ul> 
 
         <ol> <!--Ordered List-->
         <li><i>Apple</i></li>
-        <li><b>Mango</b></li> <!--Creating a sub list of mango-->
-        <ol>
-            <li>Color:Yellow</li>
-            <li>Season:Summer</li>
-        
-        </ol>
-        <li><U>Orange</U></li>
+        <li><b>Mango</b>
+            <ol> <!--Creating a sub list of mango-->
+                <li>Color: Yellow</li>
+                <li>Season: Summer</li>
+            </ol>
+        </li>
+        <li><u>Orange</u></li>
        </ol> 
 
        <!--Tables in Html-->
@@ -38,7 +38,7 @@
        <!--<tr>=used to display table row
             <td>=used to display table data
             <th>=used to display table header-->
-        <!--<thead>=to wrap table head, <tbody>=tto wrap table body-->
+        <!--<thead>=to wrap table head, <tbody>=to wrap table body-->
         <!--Colspan= used to make a cell span (combine) multiple columns-->
 
         <table>
@@ -81,8 +81,39 @@
          <label for="55555">
           <input type="radio" value="Class XII" name="class" id="55555">Class XII
           </label>
-        </form>
         
+        <br>
+        <h3>Select your fav subjects</h3>
+        <!--Checkbox-->
+        <label for="math">
+            <input type="checkbox" value="math" name="subject" id="101">math
+        </label>
+        <br>
+        <label for="phy">
+            <input type="checkbox" value="phy" name="subject" id="102">phy
+        </label>
+        <br>
+        <label for="computer science">
+            <input type="checkbox" value="computer science" name="subject" id="103">computer science
+        </label>
+        <br>
+        <!--Select-->
+        <select name="city">
+        <option value="San Marcos">San Marcos</option>
+        <option value="San Antonio">San Antonio</option>
+        <option value="Dallas">Dallas</option>
+        <option value="Austin">Austin</option>
+        </select>
+        <br>
+        <textarea name="feedback" id="feedback" placeholder="Please give your feedback here">Feedback</textarea>
+        <br>
+        <!-- Submit Button -->
+        <input type="submit" value="Submit">
+        </form>
+        <br><br>
+
+        <!--Iframe Tag-->
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/HcOc7P5BMi4?si=agrWXsd1eX6qxZn2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     </main>
 
